# Nosmarcal

./: CMakeLists.txt
Documentation/Requirements/: requirements.md
Documentation/Test plan/: Test plan.md
Documentation/Use-case/: Use-case.md
Nosmarcal/resource/: Window.ui  calculator.ui
Nosmarcal/source/: main.cpp
Nosmarcal/source/Application/: Application.cpp  Application.h
Nosmarcal/source/Calculator/: Calculator.cpp  Calculator.h
Nosmarcal/source/Calculator/Error/: Error.cpp  Error.h
Nosmarcal/source/Calculator/Evaluator/: Evaluator.cpp  Evaluator.h  Native.cpp  Native.h
Nosmarcal/source/Calculator/Lexer/: Lexer.cpp  Lexer.h  Token.h
Nosmarcal/source/Calculator/Parser/: Expression.cpp  Expression.h  Parser.cpp  Parser.h
Nosmarcal/source/Window/: Window.cpp  Window.h
